# git-trek

./: .gitattributes  .gitignore  .slopchop_intent  Cargo.toml  Makefile  OBEY.md  README.md  ROADMAP.md  SEMMAP.md  context.txt  install.sh  slopchop.toml  tasks.toml  view_concepts.txt
.github/workflows/: release.yaml  release.yml
.slopchop_apply_backup/1765084879/src/: app.rs  ui.rs
.slopchop_apply_backup/1765084985/src/: app.rs  cli.rs  shell.rs
.slopchop_apply_backup/1765085120/src/: app.rs  shell.rs
.slopchop_apply_backup/1765085227/src/: main.rs
.slopchop_apply_backup/1765085582/src/: app.rs  app_detail.rs
.slopchop_apply_backup/1765088199/src/: main.rs
.slopchop_apply_backup/1765088293/src/: app.rs  git_ops.rs
.slopchop_apply_backup/1765088323/src/: git_ops.rs  mouse.rs
.slopchop_apply_backup/1765088720/src/: app.rs  cli.rs  data.rs  git_ops.rs
.slopchop_apply_backup/1765088761/src/: git_ops.rs
.slopchop_apply_backup/1765088794/src/: cli.rs
.slopchop_apply_backup/1765088820/src/: cli.rs
.slopchop_apply_backup/1765088984/src/: cli.rs  main.rs
.slopchop_apply_backup/1765134444/src/: data.rs
.slopchop_apply_backup/1765144602/: README.md
assets/: demo.webm
legacy/: original
src/: app.rs  app_detail.rs  cli.rs  data.rs  error.rs  event.rs  git_ops.rs  lib.rs  main.rs  mouse.rs  shell.rs  terminal.rs  ui.rs  ui_cards.rs  ui_modals.rs
src/app/: navigation.rs  state.rs
src/views/: mod.rs  terrain.rs
src/views/seismic/: grid.rs  (+5 more)
tests/: app_tests.rs  data_tests.rs  git_tests.rs  input_tests.rs  integration_test.rs  treemap_tests.rs
(+24 files in other folders)
